--- a/series/pom.xml
+++ b/series/pom.xml
@@ -60,8 +60,13 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.2.3</version>
 		</dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
