--- a/series/src/main/resources/application.properties
+++ b/series/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=series
-spring.datasource.url=jdbc:mysql://localhost:3306/series
+
+# 1. URL de Railway (Usa el Host y Puerto del TCP Proxy)
+# Ejemplo: jdbc:mysql://monorail.proxy.rlwy.net:12345/railway
+spring.datasource.url=jdbc:mysql://tramway.proxy.rlwy.net:20645/series?allowPublicKeyRetrieval=true&useSSL=false
+
 spring.datasource.username=root
-spring.datasource.password=sasa1234
+spring.datasource.password=VMvEuQJdnygkvZNbatnbAAEPfPesSkBb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
